[package]
name = "sim-rs-232"
version = "0.1.0"
authors = ["Jantony Velazquez <44777335+jvg-upr@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "sim-rs-232"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
heapless = { version = "0.7.16", default-features = false }
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
